modified a few method